turtleart.housetree.HouseTree.scala.error
Erreur de compilation :
HouseTree:6: error: '<-' expected but ';' found.
    for(i <- 1 to 4) {
^HouseTree:6: error: illegal start of simple pattern
    for(i <- 1 to 4) {
    ^HouseTree:10: error: '<-' expected but ';' found.
    avance(30)
^HouseTree:11: error: '<-' expected but ';' found.
    droite(30)
^HouseTree:12: error: '<-' expected but ';' found.
    avance(30)
^HouseTree:13: error: '<-' expected but ';' found.
    droite(120)
^HouseTree:14: error: '<-' expected but ';' found.
    avance(30)
^HouseTree:15: error: '<-' expected but ';' found.
    droite(30)
^HouseTree:16: error: '<-' expected but ';' found.
    avance(30)
^HouseTree:17: error: '<-' expected but ';' found.
    droite(90)
^HouseTree:18: error: '<-' expected but ';' found.
    avance(30)
^HouseTree:19: error: '<-' expected but ';' found.
    droite(90)
^HouseTree:20: error: '<-' expected but ';' found.
    x+=20
^HouseTree:21: error: '<-' expected but ';' found.
    y=getY()
^HouseTree:23: error: '<-' expected but '}' found.
  }
  ^HouseTree:24: error: illegal start of simple expression
} 
^