turtleart.housetree.HouseTree.scala.code
override def run() {
  var x=getX()
  var y=getY()
  for {
    setX(x+20)
    for(i <- 1 to 4) {
      avance(30)
      droite(90)
    }
    avance(30)
    droite(30)
    avance(30)
    droite(120)
    avance(30)
    droite(30)
    avance(30)
    droite(90)
    avance(30)
    droite(90)
    x+=20
    y=getY()
    allerVers(x,y)
  }
}